Feat: Refactored creatNote api and updated updatenotebyid api
